--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -1,5 +1,5 @@
 <templateSet group="PHP">
-  <template name="sprt" value="sprintf($SELECTION$, [$END$])" description="Surround with sprintf() function" toReformat="false" toShortenFQNames="true">
+  <template name="sprt" value="sprintf($SELECTION$, $END$)" description="Surround with sprintf() function" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="PHP Expression" value="true" />
     </context>
